--- a/entertainment.html
+++ b/entertainment.html
@@ -98,7 +98,7 @@
     </div>
     </div>
   </main>
-  <script type="text/javascript" src="games.js"></script>
+  <script type="text/javascript" src="./js/games.js"></script>
   <script type="text/javascript" src="balloongame.js"></script>
   <div class="w3-footer w3-container w3-theme-dark w3-padding-16">
     <div class="w3-display-container w3-black" style="height:80px;">
